新增依赖模块

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,4 +1,7 @@
 body {
     height: 100px;
     background: red url(http://img15.3lian.com/2015/a1/03/d/163.jpg) no-repeat center;
+    .name {
+        color: yellow;
+    }
 }
